--- a/purchase_pricelist/views/sale_order_views.xml
+++ b/purchase_pricelist/views/sale_order_views.xml
@@ -5,7 +5,7 @@
         <field name="inherit_id" ref="sale.view_order_form" />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='pricelist_id']" position="attributes">
-                <attribute name="domain">[('used_for','=','sale'),'|',('company_id','=',False),('company_id','=',company_id)]</attribute>
+                <attribute name="domain">[('used_for', '=', 'sale'), ('company_id', 'in', [company_id, False])]</attribute>
             </xpath>
         </field>
     </record>
