--- a/purchase_pricelist/views/purchase_order_view.xml
+++ b/purchase_pricelist/views/purchase_order_view.xml
@@ -10,40 +10,44 @@
             </field>
         </field>
     </record>
+
     <record model="ir.ui.view" id="purchase_order_line_tree">
         <field name="name">purchase_discount.order.line.tree</field>
         <field name="model">purchase.order.line</field>
         <field name="inherit_id" ref="purchase.purchase_order_line_tree" />
         <field name="arch" type="xml">
             <field name="price_unit" position="after">
-                <field name="discount"/>
+                <field name="discount" />
             </field>
         </field>
     </record>
+
     <record model="ir.ui.view" id="purchase_order_form">
         <field name="name">purchase_discount.purchase.order.form</field>
         <field name="model">purchase.order</field>
         <field name="inherit_id" ref="purchase.purchase_order_form" />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='partner_ref']" position="after">
-                <label for="pricelist_id"/>
+                <label for="pricelist_id" />
                 <div class="o_row">
-                    <field name="pricelist_id" options="{'no_open':True,'no_create': True}" domain="[('used_for','=','purchase'),('on_order','=',True),('currency_id','=',currency_id)]" attrs="{'readonly': [('state', 'in', ['purchase', 'done','cancel'])]}"/>
-                    <button name="update_prices" type="object" class="btn-link mb-1 px-0" icon="fa-refresh" string="Update Prices" attrs="{'invisible': [('state', 'in', ['purchase', 'done','cancel'])]}"/>
+                    <field name="pricelist_id" options="{'no_open': True, 'no_create': True}"
+                        domain="[('used_for', '=', 'purchase'), ('on_order', '=', True), ('currency_id', '=', currency_id)]"
+                        attrs="{'readonly': [('state', 'in', ['purchase', 'done', 'cancel'])]}" />
+                    <button name="update_prices" type="object" class="btn-link mb-1 px-0" icon="fa-refresh" string="Update Prices" attrs="{'invisible': [('state', 'in', ['purchase', 'done', 'cancel'])]}" />
                 </div>
             </xpath>
             <xpath expr="//field[@name='order_line']/tree/field[@name='price_unit']" position="after">
-                <field name="discount"/>
-                <field name="disc_price_unit" optional="hide"/>
-                <field name="without_disc_price_subtotal" invisible="1"/>
+                <field name="discount" />
+                <field name="disc_price_unit" optional="hide" />
+                <field name="without_disc_price_subtotal" invisible="1" />
             </xpath>
             <xpath expr="//field[@name='order_line']/form//field[@name='price_unit']" position="after">
-                <field name="discount"/>
-                <field name="disc_price_unit"/>
+                <field name="discount" />
+                <field name="disc_price_unit" />
             </xpath>
             <xpath expr="//field[@name='tax_totals_json']" position="before">
-                <field name="without_disc_amount_untaxed" colspan="2" string="Amount Untaxed (Without Disc.)"/>
-                <field name="total_discount_amount" colspan="2" string="Discount"/>
+                <field name="without_disc_amount_untaxed" colspan="2" string="Amount Untaxed (Without Disc.)" />
+                <field name="total_discount_amount" colspan="2" string="Discount" />
             </xpath>
         </field>
     </record>
