--- a/purchase_pricelist/views/res_partner_view.xml
+++ b/purchase_pricelist/views/res_partner_view.xml
@@ -9,7 +9,7 @@
                 <attribute name="domain">[('used_for','=','sale')]</attribute>
             </xpath>
             <xpath expr="//field[@name='property_purchase_currency_id']" position="after">
-                <field name="property_product_vendor_pricelist" options="{'no_create':1}" domain="[('used_for','=','purchase'),('on_order','=',True),('currency_id','=',property_purchase_currency_id)]"/>
+                <field name="property_product_vendor_pricelist" string="Pricelist" options="{'no_create': 1}" domain="[('used_for', '=', 'purchase'), ('on_order', '=', True), ('currency_id', '=', property_purchase_currency_id)]" />
             </xpath>
         </field>
     </record>
