--- a/bista_sale_multi_ship/report/shipment_report_view.xml
+++ b/bista_sale_multi_ship/report/shipment_report_view.xml
@@ -129,10 +129,10 @@
                                     <td name="td_quantity"
                                         style="border-top: 1px solid black; border-left: none;border-right: none;border-bottom: 1px solid black;"
                                         class="text-center">
-                                        <span t-if="float(line.product_uom_qty).is_integer()"
-                                              t-esc="int(line.product_uom_qty)"/>
-                                        <span t-if="not float(line.product_uom_qty).is_integer()"
-                                              t-field="line.product_uom_qty"/>
+                                        <span t-if="float(line.product_qty).is_integer()"
+                                              t-esc="int(line.product_qty)"/>
+                                        <span t-if="not float(line.product_qty).is_integer()"
+                                              t-field="line.product_qty"/>
                                     </td>
                                     <td name="td_uom"
                                         style="border-top: 1px solid black; border-left: none;border-right: none; border-bottom: 1px solid black;"
