--- a/bista_purchase/report/purchase_order.xml
+++ b/bista_purchase/report/purchase_order.xml
@@ -181,44 +181,44 @@
         </xpath>
         <xpath expr="//table[hasclass('table', 'table-sm', 'o_main_table')]" position="after">
             <div>
-                <table style="border: 1px solid black; margin-left: auto; width:30%;">
+                <table style="border: 1px solid black; margin-left: auto; width:33.15%;">
                     <tr class="border-black o_subtotal">
-                        <td>
+                        <td style="padding-left:10px;">
                             <strong>Total W/D</strong>
                         </td>
-                        <td class="text-right" style="border-left: 1px solid black; margin: auto; width: 111px;">
+                        <td class="text-right" style="border-left: 1px solid black;padding-right:8px; margin: auto; width: 111px;">
                             <span t-field="o.without_disc_amount_untaxed"/>
                         </td>
                     </tr>
                     <tr class="border-black o_subtotal">
-                        <td>
+                        <td style="padding-left:10px;">
                             <strong>Discount</strong>
                         </td>
-                        <td class="text-right" style="border-left: 1px solid black;">
+                        <td class="text-right" style="border-left: 1px solid black; padding-right:8px;">
                             <span t-field="o.total_discount_amount"/>
                         </td>
                     </tr>
                     <tr class="border-black o_subtotal">
-                        <td>
+                        <td style="padding-left:10px;">
                             <strong>Subtotal</strong>
                         </td>
-                        <td class="text-right" style="border-left: 1px solid black;">
+                        <td class="text-right" style="border-left: 1px solid black; padding-right:8px;">
                             <span t-field="o.amount_untaxed"/>
                         </td>
                     </tr>
                     <tr class="border-black o_subtotal">
-                        <td>
+                        <td style="padding-left:10px;">
                             <strong class="text-right">Tax</strong>
                         </td>
-                        <td class="text-right" style="border-left: 1px solid black;">
+                        <td class="text-right" style="border-left: 1px solid black; padding-right:8px;">
                             <span t-field="o.amount_tax"/>
                         </td>
                     </tr>
                     <tr class="border-black o_subtotal">
-                        <td>
+                        <td style="padding-left:10px;">
                             <strong class="text-right">Shipping</strong>
                         </td>
-                        <td class="text-right" style="border-left: 1px solid black;">
+                        <td class="text-right" style="border-left: 1px solid black; padding-right:8px;">
                             <span t-esc="0.0" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                         </td>
                     </tr>
@@ -237,7 +237,7 @@
         </xpath>
         <xpath expr="//p[@t-field='o.notes']" position="before">
             <div class="text-right text-danger">
-                <span style="font-size: 12px; margin-right:1px;">DO NOT PROCESS IF PRICES ARE INCORRECT</span>
+                <span style="font-size: 12.5px; margin-right:0px;">DO NOT PROCESS IF PRICES ARE INCORRECT</span>
             </div>
         </xpath>
         <xpath expr="//p[@t-field='o.notes']" position="replace">
