[ADD] Feature #18306 - allow to attachment in sale order line

--- a/bista_purchase/views/res_partner_views.xml
+++ b/bista_purchase/views/res_partner_views.xml
@@ -42,7 +42,7 @@
                 <group>
                     <field name="rep"/>
                     <!-- <field name="write_uid" string="Last Modified By"/> -->
-                    <field name="write_date" string="Reviewed Date"/>
+                    <field name="reviewed_date" string="Reviewed Date"/>
                     <!-- <field name="active" string="Status"/> -->
                     <field name="account_number"/>
                     <field name="top_publisher"/>
